force-app/main/default/objects/Endorsement_Library__c/Endorsement_Library__c.object-meta.xml
<CustomObject>
    <label>Endorsement Library</label>
    <nameField>
        <label>Endorsement Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endorsement Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>