force-app/main/default/objects/Endorsement_Library__c/fields/Endorsement_Title__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Title__c</fullName>
    <label>Endorsement Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>