force-app/main/default/objects/Endorsement_Library__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub-limits</fullName>
            </value>
            <value>
                <fullName>Endorsements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>