force-app/main/default/objects/Endorsement_Library__c/fields/VG_Product__c.field-meta.xml
<CustomField>
    <fullName>VG_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GLPL</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Burglary</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>All Risk</fullName>
            </value>
            <value>
                <fullName>Machinery Breakdown</fullName>
            </value>
            <value>
                <fullName>CAR/EAR</fullName>
            </value>
            <value>
                <fullName>Escaping Liquid</fullName>
            </value>
            <value>
                <fullName>Cistern</fullName>
            </value>
            <value>
                <fullName>Freeze &amp; Refrigerator</fullName>
            </value>
            <value>
                <fullName>Robbery</fullName>
            </value>
            <value>
                <fullName>Special Objects</fullName>
            </value>
            <value>
                <fullName>Business Interruption</fullName>
            </value>
            <value>
                <fullName>Machinery BI</fullName>
            </value>
            <value>
                <fullName>Extra Costs</fullName>
            </value>
            <value>
                <fullName>Loss of Rent</fullName>
            </value>
            <value>
                <fullName>Epidemic Disease</fullName>
                <label>Epidemic Disease(BI)</label>
            </value>
            <value>
                <fullName>Liability GL/PL</fullName>
            </value>
            <value>
                <fullName>Legal Aid</fullName>
            </value>
            <value>
                <fullName>Crisis</fullName>
            </value>
            <value>
                <fullName>Personal Accident(visitor)</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Lift</fullName>
            </value>
            <value>
                <fullName>Forklift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>