force-app/main/default/objects/Endorsement_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Endorsement_Title__c</columns>
    <columns>VG_Product__c</columns>
    <columns>Text__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>